--- a/ProjectSuatuHari/Home/Base.lproj/Main.storyboard
+++ b/ProjectSuatuHari/Home/Base.lproj/Main.storyboard
@@ -63,15 +63,14 @@
                                     <action selector="charButtonPressed:" destination="qxs-P2-X2M" eventType="touchUpInside" id="kBS-vz-CNq"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vxd-gC-I0F">
-                                <rect key="frame" x="42" y="478.5" width="89" height="71"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vxd-gC-I0F">
+                                <rect key="frame" x="162" y="488" width="89" height="71"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="leftarrow" title=""/>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="omr-qo-HUu">
-                                <rect key="frame" x="1240" y="478.5" width="89" height="71"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" image="rightarrow" title=""/>
+                                <connections>
+                                    <action selector="previousBtnPressed:" destination="qxs-P2-X2M" eventType="touchUpInside" id="vqG-B3-v0J"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Halo Ani! " textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tsE-TE-q0h">
                                 <rect key="frame" x="538.5" y="44" width="289" height="57.5"/>
@@ -94,31 +93,31 @@
                                     <action selector="learningButtonPressed:" destination="qxs-P2-X2M" eventType="touchUpInside" id="iYB-4K-sWC"/>
                                 </connections>
                             </button>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="cy9-bS-LMW">
-                                <rect key="frame" x="210" y="217" width="946" height="532"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" pagingEnabled="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="cy9-bS-LMW">
+                                <rect key="frame" x="249" y="272" width="946" height="506"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="PYD-rH-xKP">
-                                    <size key="itemSize" width="532" height="430"/>
+                                    <size key="itemSize" width="886" height="430"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" reuseIdentifier="HomeCardCollectionViewCell" id="rAz-AA-L3T" customClass="HomeCardCollectionViewCell" customModule="ProjectSuatuHari" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="51" width="532" height="430"/>
+                                        <rect key="frame" x="0.0" y="38" width="886" height="430"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="tQA-0U-KBV">
-                                            <rect key="frame" x="0.0" y="0.0" width="532" height="430"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="886" height="430"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8GV-Eu-du0">
-                                                    <rect key="frame" x="0.0" y="30" width="573" height="371"/>
+                                                    <rect key="frame" x="135" y="4" width="616" height="422"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
                                             </subviews>
                                         </collectionViewCellContentView>
-                                        <size key="customSize" width="532" height="430"/>
+                                        <size key="customSize" width="886" height="430"/>
                                         <connections>
                                             <outlet property="homecardImage" destination="8GV-Eu-du0" id="Ehm-nb-dm3"/>
                                         </connections>
@@ -129,21 +128,24 @@
                                     <outlet property="delegate" destination="qxs-P2-X2M" id="vxR-Pz-yk3"/>
                                 </connections>
                             </collectionView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="omr-qo-HUu">
+                                <rect key="frame" x="1134" y="488" width="89" height="71"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="rightarrow" title=""/>
+                                <connections>
+                                    <action selector="nextBtnPressed:" destination="qxs-P2-X2M" eventType="touchUpInside" id="Pew-De-cgD"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="sIi-Xr-rcv"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="EXa-sW-J85" firstAttribute="leading" secondItem="MeV-Wx-f3G" secondAttribute="trailing" constant="42" id="0fP-4b-DQL"/>
-                            <constraint firstItem="sIi-Xr-rcv" firstAttribute="trailing" secondItem="omr-qo-HUu" secondAttribute="trailing" constant="37" id="19b-3d-soh"/>
-                            <constraint firstItem="vxd-gC-I0F" firstAttribute="leading" secondItem="sIi-Xr-rcv" secondAttribute="leading" constant="42" id="4Qd-ag-8Wl"/>
                             <constraint firstItem="Ymp-qa-Nk2" firstAttribute="top" secondItem="sIi-Xr-rcv" secondAttribute="top" constant="77" id="97L-qD-0Ii"/>
                             <constraint firstItem="sIi-Xr-rcv" firstAttribute="bottom" secondItem="EXa-sW-J85" secondAttribute="bottom" constant="19.5" id="BI5-vV-ZzO"/>
-                            <constraint firstItem="sIi-Xr-rcv" firstAttribute="trailing" secondItem="vxd-gC-I0F" secondAttribute="trailing" constant="1235" id="J6d-lK-TAd"/>
                             <constraint firstItem="sIi-Xr-rcv" firstAttribute="trailing" secondItem="dJ3-Jz-1bp" secondAttribute="trailing" constant="104" id="TbE-7e-jLW"/>
-                            <constraint firstItem="omr-qo-HUu" firstAttribute="baseline" secondItem="vxd-gC-I0F" secondAttribute="baseline" id="X0r-wa-drK"/>
-                            <constraint firstItem="vxd-gC-I0F" firstAttribute="centerY" secondItem="sIi-Xr-rcv" secondAttribute="centerY" id="XgG-yw-Qpu"/>
                             <constraint firstItem="EXa-sW-J85" firstAttribute="width" secondItem="UBn-Fv-Raj" secondAttribute="height" multiplier="601:1024" id="a5u-1m-pPw"/>
-                            <constraint firstItem="vxd-gC-I0F" firstAttribute="centerX" secondItem="sIi-Xr-rcv" secondAttribute="centerX" id="aHz-7j-GFE"/>
                             <constraint firstItem="MeV-Wx-f3G" firstAttribute="width" secondItem="UBn-Fv-Raj" secondAttribute="height" multiplier="601:1024" id="bnv-eq-YwG"/>
                             <constraint firstItem="tsE-TE-q0h" firstAttribute="centerX" secondItem="sIi-Xr-rcv" secondAttribute="centerX" id="c0E-dG-m64"/>
                             <constraint firstItem="tsE-TE-q0h" firstAttribute="top" secondItem="sIi-Xr-rcv" secondAttribute="top" constant="20" id="cXx-aA-uW2"/>
@@ -162,6 +164,8 @@
                         <outlet property="charButton" destination="MeV-Wx-f3G" id="00a-eb-SsU"/>
                         <outlet property="checkpointButton" destination="EXa-sW-J85" id="o5g-Zr-1hP"/>
                         <outlet property="homeCollectionView" destination="cy9-bS-LMW" id="RCW-wv-CRN"/>
+                        <outlet property="nextBtn" destination="omr-qo-HUu" id="ITI-bI-4Mt"/>
+                        <outlet property="previousBtn" destination="vxd-gC-I0F" id="pVN-RZ-1vq"/>
                         <outlet property="starView" destination="vOf-5L-E4C" id="WsL-XC-ZM2"/>
                     </connections>
                 </viewController>
