--- a/ProjectSuatuHari/ParentalGuidelines/ParentalGuidelinesStoryboard.storyboard
+++ b/ProjectSuatuHari/ParentalGuidelines/ParentalGuidelinesStoryboard.storyboard
@@ -96,6 +96,18 @@
                                     <action selector="closePressed:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="ymg-H9-Gd3"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wbY-fm-qPT">
+                                <rect key="frame" x="1224" y="518" width="103" height="57"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="tintColor" red="0.41176474089999998" green="0.40392160420000001" blue="0.8078432083" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Next">
+                                    <fontDescription key="titleFontDescription" type="boldSystem" pointSize="36"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <segue destination="QNh-b9-ZTQ" kind="show" id="5Br-Ra-wGm"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -104,6 +116,7 @@
                         <outlet property="PGCollectionView" destination="ae9-oR-CgU" id="voh-gd-k3D"/>
                         <outlet property="closePGBtn" destination="mAD-ry-9un" id="4Ue-n7-WU7"/>
                         <outlet property="nextBtn" destination="rFf-dc-1BD" id="2IZ-aX-95k"/>
+                        <outlet property="nextViewBtn" destination="wbY-fm-qPT" id="fSp-pu-GO8"/>
                         <outlet property="pgPageControl" destination="rGz-XB-ZyM" id="AE0-8A-7Fz"/>
                         <outlet property="previousBtn" destination="bSc-Ag-FME" id="5Q7-kc-ziO"/>
                     </connections>
@@ -111,6 +124,16 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="132.65007320644216" y="89.6484375"/>
+        </scene>
+        <!--Main-->
+        <scene sceneID="xyT-L5-C5e">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Main" id="QNh-b9-ZTQ" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="NHO-X8-V4M"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="GbC-20-iet" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="565" y="90"/>
         </scene>
     </scenes>
     <resources>
