--- a/ProjectSuatuHari/Story/Story.storyboard
+++ b/ProjectSuatuHari/Story/Story.storyboard
@@ -100,6 +100,27 @@
             </objects>
             <point key="canvasLocation" x="-133.08931185944363" y="278.90625"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="AF5-1m-eBN">
+            <objects>
+                <viewController id="xjE-Gk-3pd" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="88S-lt-LxI">
+                        <rect key="frame" x="0.0" y="0.0" width="1366" height="1024"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="scene1" translatesAutoresizingMaskIntoConstraints="NO" id="iKc-lr-Z6W">
+                                <rect key="frame" x="0.0" y="-34" width="1390" height="1106"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Bsz-bD-OY5"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VFR-pO-cMB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1004.0995607613469" y="741.796875"/>
+        </scene>
         <!--Story6 View Controller-->
         <scene sceneID="wE5-Xr-ucU">
             <objects>
@@ -267,6 +288,7 @@
         <image name="arrow.left.square" catalog="system" width="128" height="114"/>
         <image name="arrow.right.square" catalog="system" width="128" height="114"/>
         <image name="assetstory2bawah" width="1366" height="250"/>
+        <image name="scene1" width="5692" height="4242"/>
         <image name="texticecream" width="1179" height="179"/>
         <image name="xmark.circle.fill" catalog="system" width="128" height="121"/>
         <systemColor name="systemBackgroundColor">
